change url, text

--- a/generators/client/generators/common/templates/src/main/webapp/app/shared/jhipster/problem-details.ts.ejs
+++ b/generators/client/generators/common/templates/src/main/webapp/app/shared/jhipster/problem-details.ts.ejs
@@ -33,7 +33,7 @@ export type ProblemDetails = {
   instance: string;
 }
 
-export const ProblemWithMessageType = 'https://www.jhipster.tech/problem/problem-with-message';
+export const ProblemWithMessageType = 'https://www.trinity-technology.com/problem/problem-with-message';
 
 export type FieldErrorVM = { message: string; objectName: string; field: string };
 
