--- a/generators/docker/templates/docker/cassandra-cluster.yml.ejs
+++ b/generators/docker/templates/docker/cassandra-cluster.yml.ejs
@@ -23,7 +23,7 @@ services:
     container_name: <%= baseName.toLowerCase() %>-cassandra
     image: <%- dockerContainers.cassandra %>
     # volumes:
-    #   - ~/volumes/jhipster/<%= baseName %>/cassandra/:/var/lib/cassandra/data
+    #   - ~/volumes/trinity/<%= baseName %>/cassandra/:/var/lib/cassandra/data
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
     ports:
