--- a/generators/generate-blueprint/templates/README.md.ejs
+++ b/generators/generate-blueprint/templates/README.md.ejs
@@ -16,9 +16,9 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -%>
-# generator-jhipster-<%= baseName %>
+# generator-Trinity Platform-<%= baseName %>
 
-> JHipster blueprint, <%= baseName %> blueprint for JHipster
+> Trinity Platform blueprint, <%= baseName %> blueprint for Trinity Platform
 
 [![NPM version][npm-image]][npm-url]
 [![Generator][github-generator-image]][github-generator-url]
@@ -26,20 +26,20 @@
 
 # Introduction
 
-This is a [JHipster](https://www.jhipster.tech/) blueprint, that is meant to be used in a JHipster application.
+This is a [Trinity Platform](https://www.trinity-technology.com/) blueprint, that is meant to be used in a Trinity application.
 
 # Prerequisites
 
-As this is a [JHipster](https://www.jhipster.tech/) blueprint, we expect you have JHipster basic knowledge:
+As this is a [Trinity Platform](https://www.trinity-technology.com/) blueprint, we expect you have Trinity Platform basic knowledge:
 
-- [JHipster](https://www.jhipster.tech/)
+- [Trinity Platform](https://www.trinity-technology.com/)
 
 # Installation
 
 To install or update this blueprint:
 
 ```bash
-npm install -g generator-jhipster-<%= baseName %>
+npm install -g generator-Trinity Platform-<%= baseName %>
 ```
 
 # Usage
@@ -50,7 +50,7 @@ To use this blueprint, run the below command
 <%_ if (cli) { _%>
 <%= cliName %>
 <%_ } else { _%>
-jhipster --blueprints <%= baseName %>
+Trinity Platform --blueprints <%= baseName %>
 <%_ } _%>
 ```
 
@@ -60,7 +60,7 @@ You can look for updated <%= baseName %> blueprint specific options by running
 <%_ if (cli) { _%>
 <%= cliName %> app --help
 <%_ } else { _%>
-jhipster app --blueprints <%= baseName %> --help
+Trinity Platform app --blueprints <%= baseName %> --help
 <%_ } _%>
 ```
 
@@ -72,12 +72,7 @@ To use an unreleased version, install it using git.
 
 ```bash
 npm install -g <%= githubRepository %>#main
-jhipster --blueprints <%= baseName %> --skip-jhipster-dependencies
+Trinity Platform --blueprints <%= baseName %> --skip-Trinity Platform-dependencies
 ```
 
-[npm-image]: https://img.shields.io/npm/v/generator-jhipster-<%= baseName %>.svg
-[npm-url]: https://npmjs.org/package/generator-jhipster-<%= baseName %>
-[github-generator-image]: https://github.com/<%= githubRepository %>/actions/workflows/generator.yml/badge.svg
-[github-generator-url]: https://github.com/<%= githubRepository %>/actions/workflows/generator.yml
-[github-samples-image]: https://github.com/<%= githubRepository %>/actions/workflows/samples.yml/badge.svg
-[github-samples-url]: https://github.com/<%= githubRepository %>/actions/workflows/samples.yml
+[npm-image]: https://img.shields.io/npm/v/generator-Trinity Platform-<%= baseName %>.svg
