--- a/generators/kubernetes-helm/templates/app/Chart.yml.ejs
+++ b/generators/kubernetes-helm/templates/app/Chart.yml.ejs
@@ -1,17 +1,17 @@
 name: <%= app.baseName.toLowerCase() %>
 version: 1.0.0
 appVersion: 1.0.0
-description: <%= app.baseName.toLowerCase() %> is a JHipster based <%= app.applicationType %> application
-icon: https://www.jhipster.tech/images/logo/logo-jhipster-drink-coffee.svg
+description: <%= app.baseName.toLowerCase() %> is a Trinity Platform based <%= app.applicationType %> application
+icon: https://www.trinity-technology.com/web/image/website/1/logo/Trinity%20Technology?unique=0efb4c8
 keywords:
 - spring
 - angular
 - react
 - JHipster
 - <%= app.baseName.toLowerCase() %>
-home: https://www.jhipster.tech/
+home: https://www.trinity-technology.com
 sources:
-- https://github.com/jhipster/generator-jhipster.git
+- https://github.com/trinitytechnology
 maintainers:
 - name: Team JHipster
   email:
