--- a/generators/kubernetes-helm/templates/csvc/Chart.yml.ejs
+++ b/generators/kubernetes-helm/templates/csvc/Chart.yml.ejs
@@ -1,17 +1,17 @@
 name: common-service
 version: 1.0.0
 appVersion: 1.0.0
-description: JHipster common cross cutting services
-icon: https://www.jhipster.tech/images/logo/logo-jhipster-drink-coffee.svg
+description: Trinity Platform common cross cutting services
+icon: https://www.trinity-technology.com/web/image/website/1/logo/Trinity%20Technology?unique=0efb4c8
 keywords:
 - search
 - messaging
 - monitor
 - telemetry
 - tracing
-home: https://www.jhipster.tech/
+home: https://www.trinity-technology.com/
 sources:
-- https://github.com/jhipster/generator-jhipster.git
+- https://github.com/trinitytechnology
 maintainers:
 - name: Team JHipster
   email:
