--- a/generators/liquibase/templates/src/main/resources/config/liquibase/master.xml.ejs
+++ b/generators/liquibase/templates/src/main/resources/config/liquibase/master.xml.ejs
@@ -77,7 +77,7 @@
 <%_ } _%>
 
     <include file="config/liquibase/changelog/00000000000000_initial_schema.xml" relativeToChangelogFile="false"/>
-    <!-- trinity - Trinity will add liquibase changelogs here -->
+    <!-- trinity-needle-liquibase-add-changelog - Trinity will add liquibase changelogs here -->
     <!-- trinity-needle-liquibase-add-constraints-changelog - Trinity will add liquibase constraints changelogs here -->
     <!-- trinity-needle-liquibase-add-incremental-changelog - Trinity will add incremental liquibase changelogs here -->
 </databaseChangeLog>
