--- a/generators/server/templates/src/main/java/_package_/security/SecurityUtils.java.ejs
+++ b/generators/server/templates/src/main/java/_package_/security/SecurityUtils.java.ejs
@@ -71,7 +71,7 @@ import java.util.stream.Collectors;
  */
 public final class SecurityUtils {
 <%_ if (authenticationTypeOauth2) { _%>
-    public static final String CLAIMS_NAMESPACE = "https://www.jhipster.tech/";
+    public static final String CLAIMS_NAMESPACE = "https://www.trinity-technology.com/";
 <%_ } else if (authenticationTypeJwt) { _%>
 
     public static final MacAlgorithm JWT_ALGORITHM = MacAlgorithm.HS512;
