--- a/generators/server/templates/src/main/resources/static/index_microservices.html.ejs
+++ b/generators/server/templates/src/main/resources/static/index_microservices.html.ejs
@@ -2,7 +2,7 @@
 <html lang="<% if (enableTranslation) { %><%= nativeLanguage %><% } else { %>en<% } %>">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <title>Trinity microservice homepage</title>
+  <title>Trinity Platform microservice homepage</title>
   <style>
     ::-moz-selection {
       background: #b3d4fc;
@@ -78,46 +78,14 @@
 
   <ul>
 <%_ if (microfrontend) { %>
-    <li>Trinity's microfrontends implementation doesn't provide a stand-alone UI. Packaged microfrontends should be accessed through a Trinity gateway.</li>
+    <li>Trinity Platform's microfrontends implementation doesn't provide a stand-alone UI. Packaged microfrontends should be accessed through a Trinity gateway.</li>
     <li>Stand-alone development server can be started by `npm start`.</li>
 <%_ } else { %>
-    <li>It does not have a front-end. The front-end should be generated on a Trinity gateway.</li>
+    <li>It does not have a front-end. The front-end should be generated on a Trinity Platform gateway.</li>
 <%_ } %>
     <li>It is serving REST APIs, under the '/api' URLs.</li>
-    <%_ if (serviceDiscoveryEureka) { _%>
-    <li>To manage this microservice, you will probably want to use the <a href="https://www.trinity-technology.com/trinity-registry/">Trinity Registry</a>:
-      <ul>
-        <li>To run the Trinity Registry locally, you can use Docker:<br><code><small>docker compose -f src/main/docker/trinity-registry.yml up --wait</small></code></li>
-        <li>Its default URL is <a href="http://localhost:8761/">http://localhost:8761/</a> and its default login/password is <code>admin/admin</code></li>
-      </ul>
-    </li>
-    <%_ } else { _%>
-    <li>To manage this microservice, you will probably want to use <a href="https://www.consul.io/">Consul</a>:
-      <ul>
-        <li>To run Consul locally, you can use Docker:<br><code><small>docker compose -f src/main/docker/consul.yml up --wait</small></code></li>
-        <li>Its default URL is <a href="http://localhost:8500/">http://localhost:8500/</a></li>
-      </ul>
-    </li>
-    <%_ } _%>
     <li>OpenAPI documentation endpoint for those APIs is at <a href="./v3/api-docs">/v3/api-docs</a>, but if you want access to the full Swagger UI, you should use a Trinity gateway or a Trinity Registry, which will serve as API developer portals.</li>
   </ul>
-
-  <h2>
-    If you have any question:
-  </h2>
-
-  <ul>
-    <li><a href="<%- hipsterDocumentationLink %>" target="_blank" rel="noopener noreferrer">Trinty homepage</a></li>
-    <li><a href="<%- hipsterStackoverflowLink %>" target="_blank" rel="noopener noreferrer">Trinty on Stack Overflow</a></li>
-    <li><a href="<%- hipsterBugTrackerLink %>" target="_blank" rel="noopener noreferrer">Trinty bug tracker</a></li>
-    <li><a href="<%- hipsterChatLink %>" target="_blank" rel="noopener noreferrer">Trinty public chat room</a></li>
-    <li><a href="<%- hipsterTwitterLink %>" target="_blank" rel="noopener noreferrer">follow @trinty on Twitter</a></li>
-  </ul>
-
-  <p>
-    <span>If you like Trinity, don't forget to give us a star on</span> <a href="<%- hipsterProjectLink %>" target="_blank" rel="noopener noreferrer">GitHub</a>!
-  </p>
-
 </div>
 </body>
 </html>
