--- a/generators/vue/templates/src/main/webapp/app/constants.ts.ejs
+++ b/generators/vue/templates/src/main/webapp/app/constants.ts.ejs
@@ -17,6 +17,6 @@
  limitations under the License.
 -%>
 // Errors
-export const PROBLEM_BASE_URL = 'https://www.jhipster.tech/problem';
+export const PROBLEM_BASE_URL = 'https://www.trinity-technology.com//problem';
 export const EMAIL_ALREADY_USED_TYPE = `${PROBLEM_BASE_URL}/email-already-used`;
 export const LOGIN_ALREADY_USED_TYPE = `${PROBLEM_BASE_URL}/login-already-used`;
