--- a/generators/angular/templates/src/main/webapp/app/config/error.constants.ts.ejs
+++ b/generators/angular/templates/src/main/webapp/app/config/error.constants.ts.ejs
@@ -16,6 +16,6 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -%>
-export const PROBLEM_BASE_URL = 'https://www.jhipster.tech/problem';
+export const PROBLEM_BASE_URL = 'https://www.trinity-technology.com/problem';
 export const EMAIL_ALREADY_USED_TYPE = `${PROBLEM_BASE_URL}/email-already-used`;
 export const LOGIN_ALREADY_USED_TYPE = `${PROBLEM_BASE_URL}/login-already-used`;
