--- a/generators/angular/templates/src/main/webapp/app/shared/alert/alert-error.component.spec.ts.ejs
+++ b/generators/angular/templates/src/main/webapp/app/shared/alert/alert-error.component.spec.ts.ejs
@@ -100,7 +100,7 @@ describe('Alert Error Component', () => {
         status: 400,
         statusText: 'Bad Request',
         error: {
-          type: 'https://www.jhipster.tech/problem/problem-with-message',
+          type: 'https://www.trinity-technology.com/problem/problem-with-message',
           title: 'Bad Request',
           status: 400,
           path: '/api/foos',
@@ -135,7 +135,7 @@ describe('Alert Error Component', () => {
         status: 400,
         statusText: 'Bad Request',
         error: {
-          type: 'https://www.jhipster.tech/problem/problem-with-message',
+          type: 'https://www.trinity-technology.com/problem/problem-with-message',
           title: 'Method argument not valid',
           status: 400,
           path: '/api/foos',
