--- a/generators/client/templates/README.md.jhi.client.ejs
+++ b/generators/client/templates/README.md.jhi.client.ejs
@@ -91,7 +91,7 @@ The `<%= clientPackageManager %> run` command will list all of the scripts avail
 
 ### PWA Support
 
-JHipster ships with PWA (Progressive Web App) support, and it's turned off by default. One of the main components of a PWA is a service worker.
+Trinity Platform ships with PWA (Progressive Web App) support, and it's turned off by default. One of the main components of a PWA is a service worker.
 
   <%_ if (!clientFrameworkAngular) { _%>
 The service worker initialization code is commented out by default. To enable it, uncomment the following code in `<%= clientSrcDir %>index.html`:
@@ -106,7 +106,7 @@ The service worker initialization code is commented out by default. To enable it
 </script>
 ```
 
-Note: [Workbox](https://developers.google.com/web/tools/workbox/) powers JHipster's service worker. It dynamically generates the `service-worker.js` file.
+Note: [Workbox](https://developers.google.com/web/tools/workbox/) powers Trinity Platform's service worker. It dynamically generates the `service-worker.js` file.
   <%_ } _%>
   <%_ if (clientFrameworkAngular) { _%>
 The service worker initialization code is disabled by default. To enable it, uncomment the following code in `<%= clientSrcDir %>app/app.config.ts`:
@@ -147,7 +147,7 @@ Edit [<%= clientSrcDir %>content/scss/vendor.scss](<%= clientSrcDir %>content/sc
   <%_ } _%>
 Note: There are still a few other things remaining to do for Leaflet that we won't detail here.
 
-For further instructions on how to develop with JHipster, have a look at [Using JHipster in development][].
+For further instructions on how to develop with Trinity Platform, have a look at [Using Trinity Platform in development][].
 
 <%_ if (microfrontend) { -%>
 ### Developing Microfrontend
