--- a/generators/docker/templates/docker/couchbase.yml.ejs
+++ b/generators/docker/templates/docker/couchbase.yml.ejs
@@ -39,4 +39,4 @@ services:
       timeout: 5s
       retries: 10
     # volumes:
-    #   - ~/volumes/jhipster/<%= baseName.toLowerCase() %>/couchbase/:/opt/couchbase/var
+    #   - ~/volumes/trinity/<%= baseName.toLowerCase() %>/couchbase/:/opt/couchbase/var
