--- a/generators/docker/templates/docker/elasticsearch.yml.ejs
+++ b/generators/docker/templates/docker/elasticsearch.yml.ejs
@@ -22,7 +22,7 @@ services:
   elasticsearch:
     image: <%- dockerContainers.elasticsearch %>
     # volumes:
-    #   - ~/volumes/jhipster/<%= baseName %>/elasticsearch/:/usr/share/elasticsearch/data/
+    #   - ~/volumes/trinity/<%= baseName %>/elasticsearch/:/usr/share/elasticsearch/data/
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
     ports:
