--- a/generators/docker/templates/docker/mongodb.yml.ejs
+++ b/generators/docker/templates/docker/mongodb.yml.ejs
@@ -26,7 +26,7 @@ services:
     ports:
       - 127.0.0.1:27017:27017
     # volumes:
-    #   - ~/volumes/jhipster/<%= baseName %>/mongodb/:/data/db/
+    #   - ~/volumes/trinity/<%= baseName %>/mongodb/:/data/db/
     healthcheck:
       test: ['CMD', 'echo', "'db.runCommand(\"ping\").ok'", '|', 'mongo', 'localhost:27017/test', '--quiet']
       interval: 5s
