--- a/generators/docker/templates/docker/neo4j.yml.ejs
+++ b/generators/docker/templates/docker/neo4j.yml.ejs
@@ -22,7 +22,7 @@ services:
   neo4j:
     image: <%- dockerContainers.neo4j %>
     # volumes:
-    #   - ~/volumes/jhipster/<%= baseName %>/neo4j/:/data
+    #   - ~/volumes/trinity/<%= baseName %>/neo4j/:/data
     environment:
       - NEO4J_AUTH=none
     # If you want to expose these ports outside your dev PC,
