--- a/generators/react/templates/src/main/webapp/app/config/notification-middleware.spec.ts.ejs
+++ b/generators/react/templates/src/main/webapp/app/config/notification-middleware.spec.ts.ejs
@@ -56,7 +56,7 @@ describe('Notification Middleware', () => {
       isAxiosError: true,
       response: {
         data: {
-          type: 'https://www.jhipster.tech/problem/problem-with-message',
+          type: 'https://www.trinity-technology.com/problem/problem-with-message',
           title: 'Method argument not valid',
           status: 400,
           path: '/api/foos',
@@ -135,7 +135,7 @@ describe('Notification Middleware', () => {
         data: {
           title: 'Incorrect password',
           status: 400,
-          type: 'https://www.jhipster.tech/problem/invalid-password',
+          type: 'https://www.trinity-technology.com/problem/invalid-password',
         },
         status: 400,
       },
