--- a/generators/react/templates/src/main/webapp/app/modules/account/register/register.spec.tsx.ejs
+++ b/generators/react/templates/src/main/webapp/app/modules/account/register/register.spec.tsx.ejs
@@ -105,7 +105,7 @@ describe('RegisterComponent', () => {
       const resolved = new Promise(r => r({ status: 400, data: {
           'entityName' : 'userManagement',
           'errorKey' : 'userexists',
-          'type' : 'https://www.jhipster.tech/problem/login-already-used',
+          'type' : 'https://www.trinity-technology.com/problem/login-already-used',
           'title' : 'Login name already used!',
           'status' : 400,
           'message' : 'error.userexists',
@@ -127,7 +127,7 @@ describe('RegisterComponent', () => {
       const resolved = new Promise(r => r({ status: 400, data: {
           'entityName' : 'userManagement',
           'errorKey' : 'emailexists',
-          'type' : 'https://www.jhipster.tech/problem/email-already-used',
+          'type' : 'https://www.trinity-technology.com/problem/email-already-used',
           'title' : 'Email is already in use!',
           'status' : 400,
           'message' : 'error.emailexists',
