--- a/generators/server/templates/README.md.jhi.spring-boot.ejs
+++ b/generators/server/templates/README.md.jhi.spring-boot.ejs
@@ -42,10 +42,9 @@ In the project root, Trinity generates configuration files for tools like git, p
 
   <%_ } _%>
 - `.yo-rc.json` - Yeoman configuration file
-Trinity Platform configuration is stored in this file at `generator-jhipster` key. You may find `generator-jhipster-*` for specific blueprints configuration.
+Trinity Platform configuration is stored in this file.
 - `.yo-resolve` (optional) - Yeoman conflict resolver
 Allows to use a specific action when conflicts are found skipping prompts for files that matches a pattern. Each line should match `[pattern] [action]` with pattern been a [Minimatch](https://github.com/isaacs/minimatch#minimatch) pattern and action been one of skip (default if omitted) or force. Lines starting with `#` are considered comments and are ignored.
-- `.jhipster/*.json` - Trinity entity configuration files
   <%_ if (!skipClient) { %>
 - `npmw` - wrapper to use locally installed npm.
 Trinity Platform installs Node and npm locally using the build tool by default. This wrapper makes sure npm is installed locally and uses it avoiding some differences different versions can cause. By using `./npmw` instead of the traditional `npm` you can configure a Node-less environment to develop or test your application.
@@ -163,7 +162,7 @@ function (user, context, callback) {
   const roles = (context.authorization || {}).roles;
 
   function prepareCustomClaimKey(claim) {
-    return `https://www.jhipster.tech/${claim}`;
+    return `https://www.trinity-technology.com/${claim}`;
   }
 
   const rolesClaim = prepareCustomClaimKey('roles');
@@ -300,13 +299,6 @@ To package your application as a war in order to deploy it to an application ser
 <%_ } _%>
 ```
 
-### Trinity Control Center
-
-Trinity Control Center can help you manage and control your application(s). You can start a local control center server (accessible on http://localhost:7419) with:
-
-```
-docker compose -f src/main/docker/jhipster-control-center.yml up
-```
 
 <&_ } -&>
 
