--- a/generators/server/templates/src/main/resources/config/application-prod.yml.ejs
+++ b/generators/server/templates/src/main/resources/config/application-prod.yml.ejs
@@ -21,8 +21,6 @@
 #
 # This configuration overrides the application.yml file.
 #
-# More information on profiles: https://www.jhipster.tech/profiles/
-# More information on configuration properties: https://www.jhipster.tech/common-application-properties/
 # ===================================================================
 
 # ===================================================================
@@ -207,9 +205,8 @@ server:
     min-response-size: 1024
 
 # ===================================================================
-# JHipster specific properties
+# Trinity specific properties
 #
-# Full reference is available at: https://www.jhipster.tech/common-application-properties/
 # ===================================================================
 
 jhipster:
@@ -327,8 +324,6 @@ jhipster:
 # Add your own application properties here, see the ApplicationProperties class
 # to have type-safe configuration, like in the TrinityProperties above
 #
-# More documentation is available at:
-#  https://www.trinity-technology.com
 # ===================================================================
 
 # application:
